???>DA?.daD>aSD

--- a/src/templates/_loaderStyle.html
+++ b/src/templates/_loaderStyle.html
@@ -9,6 +9,11 @@
   padding-top: 2rem;
 }
 
+a[disabled] {
+  pointer-events: none;
+  opacity: .5 !important;
+}
+
 .mono {
   font-family: monospace;
 }
