added more panels

--- a/src/templates/_info.html
+++ b/src/templates/_info.html
@@ -1,3 +1,5 @@
+<section ng-repeat="response in lookupResponse">
+<hr>
 <div class="row">
 	<div class="col-md-6">
 		<ng-include src="'templates/_activeuser.html'"></ng-include>
@@ -6,3 +8,5 @@
 		<ng-include src="'templates/_waitinglist.html'"></ng-include>
 	</div>
 </div>
+<hr>
+</section>
