--- a/src/templates/lookup.html
+++ b/src/templates/lookup.html
@@ -11,7 +11,7 @@
 
 	<br>
 
-	<ng-include src="'templates/_info.html'"></ng-include>
+	<ng-include src="'templates/_info.html'" ng-init="initInfo()"></ng-include>
 
 	<hr>
 
