--- a/src/templates/_activeuser.html
+++ b/src/templates/_activeuser.html
@@ -1,5 +1,5 @@
-<div ng-if="lookupResponse.Users.length">
-	<div class="list-group" ng-repeat="account in lookupResponse.Users">
+<div ng-if="response.Users.length">
+	<div class="list-group" ng-repeat="account in response.Users">
 		<div class="list-group-item list-group-item-info">
 			<strong>Active Users</strong>
 		</div>                   
@@ -120,7 +120,7 @@
 		<div class="list-group-item disabled"></div>
 		<form class="list-group-item" ng-show="{{ user.Scope=='admin super' }}" ng-submit="deleteUserAU()">
 			<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
-			<button type="submit" class="btn btn-danger">
+			<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
 				<span class="fa fa-trash-o"></span> Delete from Active Users
 			</button>
 		</form>
