--- a/src/templates/_loaderCode.html
+++ b/src/templates/_loaderCode.html
@@ -1,58 +1,3 @@
-<div class='loader'>
-  <div class='hexagon'>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-  </div>
-  <div class='hexagon'>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-  </div>
-  <div class='hexagon'>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-  </div>
-  <div class='hexagon'>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-  </div>
-  <div class='hexagon'>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-  </div>
-  <div class='hexagon'>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-  </div>
-  <div class='hexagon'>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-    <div class='part'></div>
-  </div>
-</div>
+<svg class="loader" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+   <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+</svg>
