--- a/src/templates/_waitinglist.html
+++ b/src/templates/_waitinglist.html
@@ -1,5 +1,5 @@
-<div ng-if="lookupResponse.Invites.length">
-	<div class="list-group" ng-repeat="account in lookupResponse.Invites">
+<div ng-if="response.Invites.length">
+	<div class="list-group" ng-repeat="account in response.Invites">
 		<div class="list-group-item list-group-item-warning">
 			<strong>Waiting List</strong>
 		</div>                   
@@ -50,10 +50,11 @@
 			<pre ng-show="{{ account.Comment!='' }}">{{ account.Comment }}</pre>
 		</div>
 		<div class="list-group-item disabled"></div>
-		<div class="list-group-item">
-			<a href class="btn btn-danger">
+		<form class="list-group-item" ng-show="{{ user.Scope=='admin super' }}" ng-submit="deleteUserWL()">
+			<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
+			<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
 				<span class="fa fa-trash-o"></span> Delete from Waiting List
-			</a>
-		</div>                    
+			</button>
+		</form>                    
 	</div>
 </div>
