--- a/src/templates/monitor.html
+++ b/src/templates/monitor.html
@@ -1,8 +1,12 @@
-<div class="container-fluid" ng-init="monitor()">
+<div class="container-fluid">
 
+  <p ng-show="!monitorAccounts.data.Accounts">
+  <a href class="btn btn-default" ng-click="monitor()" ng-disabled="loading">Get Accounts</a><br>
+  <em>(This can take up to a minute and will freeze the app.)</em>
+  </p>
   <h1 class="alert alert-info" ng-show="monitorAccounts.data.Accounts">
   <a ng-click="forceMonitor()" ng-disabled="loading" class="pull-right btn btn-default">
-  <span class="fa fa-refresh"></span>
+  <span class="fa fa-refresh"></span> Refresh Accounts
   </a>
   <kbd>{{ TotalUnread }}</kbd> unread emails 
   <span ng-show="TotalUnread < 100">...Niceee!</span>
