--- a/src/templates/_waitinglist.html
+++ b/src/templates/_waitinglist.html
@@ -50,7 +50,7 @@
 			<pre ng-show="{{ account.Comment!='' }}">{{ account.Comment }}</pre>
 		</div>
 		<div class="list-group-item disabled"></div>
-		<form class="list-group-item" ng-show="{{ user.Scope=='admin super' }}" ng-submit="deleteUserWL()">
+		<form class="list-group-item" ng-submit="deleteUserWL()">
 			<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
 			<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
 				<span class="fa fa-trash-o"></span> Delete from Waiting List
