--- a/src/templates/_waitinglist.html
+++ b/src/templates/_waitinglist.html
@@ -11,18 +11,18 @@
 			<code class="pull-right">{{ account.Name }}</code>
 			<strong>Username:</strong>
 		</div>
-		<div class="list-group-item" ng-show="{{ account.Status<4 }}">
+		<div class="list-group-item" ng-show="{{ user.Scope=='admin' }}">
 			<code class="pull-right">{{ account.NotificationEmail }}</code>
 			<strong>Notification Email:</strong>
 		</div>
-		<div class="list-group-item form-inline" ng-show="{{ account.Status>3 }}">
+		<div class="list-group-item form-inline" ng-show="{{ user.Scope=='admin super' }}">
 			<strong>Notification Email:</strong>
-			<div class="input-group pull-right">
-				<input class="form-control" value="{{ account.NotificationEmail }}">
+			<form class="input-group pull-right" ng-submit="changeInviteEmail()">
+				<input class="form-control" ng-init="Email =  account.NotificationEmail"  ng-model="Email">
 				<span class="input-group-btn">
-					<button class="btn btn-primary" type="button">Update</button>
+					<button class="btn btn-primary" type="submit">Update</button>
 				</span>
-			</div>
+			</form>
 			<div class="clearfix"></div>
 		</div>
 		<div class="list-group-item disabled"></div>
