--- a/src/templates/_waitinglist.html
+++ b/src/templates/_waitinglist.html
@@ -11,11 +11,7 @@
 			<code class="pull-right">{{ account.Name }}</code>
 			<strong>Username:</strong>
 		</div>
-		<div class="list-group-item" ng-show="{{ user.Scope=='admin' }}">
-			<code class="pull-right">{{ account.NotificationEmail }}</code>
-			<strong>Notification Email:</strong>
-		</div>
-		<div class="list-group-item form-inline" ng-show="{{ user.Scope=='admin super' }}">
+		<div class="list-group-item form-inline">
 			<strong>Notification Email:</strong>
 			<form class="input-group pull-right" ng-submit="changeInviteEmail()">
 				<input class="form-control" ng-init="Email =  account.NotificationEmail"  ng-model="Email">
