--- a/src/templates/multi.html
+++ b/src/templates/multi.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-	<form ng-submit="debug()">
+	<form method="POST" ng-submit="debug()">
 		<p class="alert alert-info">Enter multiple emails and usernames to lookup up many users at once. </p>
 		<div class="row">
 		<div class="col-md-6">
