--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,7 +2,7 @@
 
 	<div class="row">
 		<div class="col-md-4 col-md-offset-4" ng-show="showLogin">
-			<form id="loginForm" ng-submit="login()" ng-hide="isLoggedIn()">
+			<form method="POST" id="loginForm" ng-submit="login()" ng-hide="isLoggedIn()">
 				<div class="form-group">
 					<label>Username</label>
 					<input autofocus ng-model="username" type="text" class="form-control" id="username" placeholder="Username">
