--- a/src/templates/_info.html
+++ b/src/templates/_info.html
@@ -3,28 +3,28 @@
 
 <div class="row" ng-if="response.Results.length" ng-repeat="result in response.Results">
 
-	<div ng-if="result.Users.length">
-		<div class="list-group" ng-repeat="account in result.Users">
+	<div ng-if="result.User" class="col">
+		<div class="list-group">
 			<div class="list-group-item list-group-item-info">
 				<strong>Active Users</strong>
 			</div>
 			<div class="list-group-item">
-				<code class="pull-right">{{ account.ID }}</code>
-				<input type="hidden" ng-init="accountID=account.ID">
+				<code class="pull-right">{{ result.User.ID }}</code>
+				<input type="hidden" ng-init="accountID=result.User.ID">
 				<strong>UserID:</strong>
 			</div>
 			<div class="list-group-item">
-				<code class="pull-right">{{ account.Name }}</code>
+				<code class="pull-right">{{ result.User.Name }}</code>
 				<strong>Username:</strong>
 			</div>
 			<div class="list-group-item" ng-show="{{ user.Scope=='admin' }}">
-				<code class="pull-right">{{ account.NotificationEmail }}</code>
+				<code class="pull-right">{{ result.User.NotificationEmail }}</code>
 				<strong>Notification Email:</strong>
 			</div>
 			<div class="list-group-item form-inline" ng-show="{{ user.Scope=='admin super' }}">
 				<strong>Notification Email:</strong>
 				<form method="POST" class="input-group pull-right" ng-submit="changeNotificationEmail()">
-					<input class="form-control" ng-init="accountNotfEmail =  account.NotificationEmail"  ng-model="accountNotfEmail">
+					<input class="form-control" ng-init="accountNotfEmail =  result.User.NotificationEmail"  ng-model="accountNotfEmail">
 					<span class="input-group-btn">
 						<button class="btn btn-primary" type="submit">Update</button>
 					</span>
@@ -35,7 +35,7 @@
 			<div class="list-group-item">
 				<form method="POST" class="input-group" ng-submit="updateLoginPassword()">
 					<input type="text" class="form-control mono" id="resetLoginPW" ng-init="newLoginPass = randPass()" ng-model="newLoginPass">
-					<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
+					<input type="hidden" ng-init="accountID=result.User.ID" ng-model="accountID">
 					<span class="input-group-btn">
 						<button class="btn btn-primary" type="submit">
 							<span class="fa fa-retweet"></span> Reset Login PW
@@ -45,88 +45,88 @@
 				<div class="clearfix"></div>
 			</div>
 			<form method="POST" class="list-group-item" ng-submit="logoutUser()">
-				<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
+				<input type="hidden" ng-init="accountID=result.User.ID" ng-model="accountID">
 				<button type="submit" href class="btn btn-warning">
 					<span class="fa fa-power-off"></span> Logout User
 				</button>
 			</form>
 			<div class="list-group-item disabled"></div>
 			<div class="list-group-item">
-				<code class="pull-right" ng-if="account.LastLoginTime!=0">
-				{{ account.LastLoginTime*1000 | date:'medium' }}
+				<code class="pull-right" ng-if="result.User.LastLoginTime!=0">
+				{{ result.User.LastLoginTime*1000 | date:'medium' }}
 				</code>
 				<strong>Last Login Time:</strong>
 			</div>
 			<div class="list-group-item">
-				<code class="pull-right" ng-if="account.LastActivityTime!=0">
-				{{ account.LastActivityTime*1000 | date:'medium' }}
+				<code class="pull-right" ng-if="result.User.LastActivityTime!=0">
+				{{ result.User.LastActivityTime*1000 | date:'medium' }}
 				</code>
 				<strong>Last Activity Time:</strong>
 			</div>
 			<div class="list-group-item">
-				<code class="pull-right" ng-if="account.CreateTime!=0">
-				{{ account.CreateTime*1000 | date:'medium' }}
+				<code class="pull-right" ng-if="result.User.CreateTime!=0">
+				{{ result.User.CreateTime*1000 | date:'medium' }}
 				</code>
 				<strong>Create Time:</strong>
 			</div>
 			<div class="list-group-item">
-				<code class="pull-right" ng-if="account.UsedSpace==0">{{ account.UsedSpace }}</code>
-				<code class="pull-right" ng-if="account.UsedSpace!=0">{{ account.UsedSpace | bytes }}</code>
+				<code class="pull-right" ng-if="result.User.UsedSpace==0">{{ result.User.UsedSpace }}</code>
+				<code class="pull-right" ng-if="result.User.UsedSpace!=0">{{ result.User.UsedSpace | bytes }}</code>
 				<strong>Used Space:</strong>
 			</div>
 			<div class="list-group-item">
 				<form method="POST" class="pull-right status" ng-show="{{ user.Scope === 'admin' }}">
-					<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID" />
-					<button ng-click="changeStatus(0, account)" type="submit" ng-disabled="{{ account.Status == 3 || account.Status == 4 }}" class="btn btn-default btn-xs"
-					ng-class="{'btn-primary': account.Status===0}">
+					<input type="hidden" ng-init="accountID=result.User.ID" ng-model="accountID" />
+					<button ng-click="changeStatus(0, account)" type="submit" ng-disabled="{{ result.User.Status == 3 || result.User.Status == 4 }}" class="btn btn-default btn-xs"
+					ng-class="{'btn-primary': result.User.Status===0}">
 						Disabled
 					</button>
-					<button ng-click="changeStatus(2, account)" type="submit" ng-disabled="{{ account.Status == 3 || account.Status == 4 }}" class="btn btn-default btn-xs"
-					ng-class="{'btn-primary': account.Status===2}">
+					<button ng-click="changeStatus(2, account)" type="submit" ng-disabled="{{ result.User.Status == 3 || result.User.Status == 4 }}" class="btn btn-default btn-xs"
+					ng-class="{'btn-primary': result.User.Status===2}">
 						Enabled
 					</button>
 					<button type="button" disabled class="btn btn-default btn-xs"
-					ng-class="{'btn-primary': account.Status===3}">
+					ng-class="{'btn-primary': result.User.Status===3}">
 						Admin
 					</button>
 					<button type="button" disabled class="btn btn-default btn-xs"
-					ng-class="{'btn-primary': account.Status===4}">
+					ng-class="{'btn-primary': result.User.Status===4}">
 						Super
 					</button>
 				</form>
 				<form method="POST" class="pull-right status" ng-show="{{ user.Scope === 'admin super' }}">
-					<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
-					<button ng-click="changeStatus(0, account)" type="submit" ng-disabled="{{ account.Status == 4 }}" class="btn btn-default btn-xs"
-						ng-class="{'btn-primary': account.Status==0}">
+					<input type="hidden" ng-init="accountID=result.User.ID" ng-model="accountID">
+					<button ng-click="changeStatus(0, account)" type="submit" ng-disabled="{{ result.User.Status == 4 }}" class="btn btn-default btn-xs"
+						ng-class="{'btn-primary': result.User.Status==0}">
 						Disabled
 					</button>
-					<button ng-click="changeStatus(2, account)" type="submit" ng-disabled="{{ account.Status == 4 }}" class="btn btn-default btn-xs"
-						ng-class="{'btn-primary': account.Status==2}">
+					<button ng-click="changeStatus(2, account)" type="submit" ng-disabled="{{ result.User.Status == 4 }}" class="btn btn-default btn-xs"
+						ng-class="{'btn-primary': result.User.Status==2}">
 						Enabled
 					</button>
-					<button ng-click="changeStatus(3, account)" type="submit" ng-disabled="{{ account.Status == 4 }}" class="btn btn-default btn-xs"
-						ng-class="{'btn-primary': account.Status==3}">
+					<button ng-click="changeStatus(3, account)" type="submit" ng-disabled="{{ result.User.Status == 4 }}" class="btn btn-default btn-xs"
+						ng-class="{'btn-primary': result.User.Status==3}">
 						Admin
 					</button>
 					<button type="button" disabled class="btn btn-default btn-xs"
-						ng-class="{'btn-primary': account.Status==4}">
+						ng-class="{'btn-primary': result.User.Status==4}">
 						Super
 					</button>
 				</form>
 				<strong>User Status:</strong>
 			</div>
 			<form method="POST" class="list-group-item">
-				<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
+				<input type="hidden" ng-init="accountID=result.User.ID" ng-model="accountID">
 				<div class="btn-group pull-right">
-					<button ng-click="changeLevel(1)" class="btn btn-default btn-xs" ng-class="{'btn-primary': account.Level==1}">500 MB</button>
-					<button ng-click="changeLevel(2)" class="btn btn-default btn-xs" ng-class="{'btn-primary': account.Level==2}">1 GB</button>
-					<button ng-click="changeLevel(3)" class="btn btn-default btn-xs" ng-class="{'btn-primary': account.Level==3}">10 GB</button>
+					<button ng-click="changeLevel(1)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==1}">500 MB</button>
+					<button ng-click="changeLevel(2)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==2}">1 GB</button>
+					<button ng-click="changeLevel(3)" class="btn btn-default btn-xs" ng-class="{'btn-primary': result.User.Level==3}">10 GB</button>
 				</div>
 				<strong>User Level:</strong>
 			</form>
 			<div class="list-group-item disabled"></div>
 			<form method="POST" class="list-group-item" ng-show="{{ user.Scope=='admin super' }}" ng-submit="deleteUserAU()">
-				<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
+				<input type="hidden" ng-init="accountID=result.User.ID" ng-model="accountID">
 				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
 					<span class="fa fa-trash-o"></span> Delete from Active Users
 				</button>
@@ -135,23 +135,23 @@
 	</div>
 
 
-	<div ng-if="result.Invites.length">
-		<div class="list-group" ng-repeat="account in result.Invites">
+	<div ng-if="result.Invite" class="col">
+		<div class="list-group">
 			<div class="list-group-item list-group-item-warning">
 				<strong>Waiting List</strong>
 			</div>                   
 			<div class="list-group-item">
-				<code class="pull-right">{{ account.ID }}</code>
+				<code class="pull-right">{{ result.Invite.ID }}</code>
 				<strong>UserID:</strong>
 			</div>
 			<div class="list-group-item">
-				<code class="pull-right">{{ account.Name }}</code>
+				<code class="pull-right">{{ result.Invite.Name }}</code>
 				<strong>Username:</strong>
 			</div>
 			<div class="list-group-item form-inline">
 				<strong>Notification Email:</strong>
 				<form method="POST" class="input-group pull-right" ng-submit="changeInviteEmail()">
-					<input class="form-control" ng-init="Email =  account.NotificationEmail"  ng-model="Email">
+					<input class="form-control" ng-init="Email =  result.Invite.NotificationEmail"  ng-model="Email">
 					<span class="input-group-btn">
 						<button class="btn btn-primary" type="submit">Update</button>
 					</span>
@@ -161,30 +161,30 @@
 			<div class="list-group-item disabled"></div>
 			<form method="POST" class="list-group-item" ng-submit="sendInvite()">
 				<button type="submit" href class="btn btn-primary">
-					<span ng-show="account.Sent==0"><span class="fa fa-send"></span> Send Invite</span>
-					<span ng-show="account.Sent==1"><span class="fa fa-send"></span> Resend Invite</span>
+					<span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send Invite</span>
+					<span ng-show="result.Invite.Sent==1"><span class="fa fa-send"></span> Resend Invite</span>
 				</button>
 			</form>
 			<div class="list-group-item">
-				<code class="pull-right" ng-if="account.CreateTime!=0">
-				{{ account.CreateTime*1000 | date:'medium' }}
+				<code class="pull-right" ng-if="result.Invite.CreateTime!=0">
+				{{ result.Invite.CreateTime*1000 | date:'medium' }}
 				</code>
 				<strong>Create Time:</strong>
 			</div>
 			<div class="list-group-item">
-				<code class="pull-right" ng-if="account.SendTime!=0">
-				{{ account.SendTime*1000 | date:'medium' }}
+				<code class="pull-right" ng-if="result.Invite.SendTime!=0">
+				{{ result.Invite.SendTime*1000 | date:'medium' }}
 				</code>
 				<strong>Send Time:</strong>
 			</div>
 			<div class="list-group-item">
 				<strong>Comment:</strong>
 				<br>
-				<pre ng-show="{{ account.Comment!='' }}">{{ account.Comment }}</pre>
+				<pre ng-show="{{ result.Invite.Comment!='' }}">{{ result.Invite.Comment }}</pre>
 			</div>
 			<div class="list-group-item disabled"></div>
 			<form method="POST" class="list-group-item" ng-submit="deleteUserWL()">
-				<input type="hidden" ng-init="accountID=account.ID" ng-model="accountID">
+				<input type="hidden" ng-init="accountID=result.Invite.ID" ng-model="accountID">
 				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
 					<span class="fa fa-trash-o"></span> Delete from Waiting List
 				</button>
