--- a/src/templates/_info.html
+++ b/src/templates/_info.html
@@ -1,9 +1,65 @@
 <section ng-repeat="response in lookupResponse">
 <hr>
 
-<div class="row" ng-if="response.Results.length" ng-repeat="result in response.Results">
+<div class="row results" ng-if="response.Results.length" ng-repeat="result in response.Results">
 
-	<div ng-if="result.User" class="col">
+	<h1 ng-if="result.User.Name">{{ result.User.Name }}</h1>
+	<h1 ng-if="!result.User.Name">{{ result.Invite.Name }}</h1>
+
+	<div ng-if="result.Invite" class="col">
+		<div class="list-group">
+			<div class="list-group-item list-group-item-warning">
+				<strong>Waiting List</strong>
+			</div>                   
+			<div class="list-group-item">
+				<code class="pull-right">{{ result.Invite.ID }}</code>
+				<strong>UserID:</strong>
+			</div>
+			<div class="list-group-item form-inline">
+				<strong>Notification Email:</strong>
+				<form method="POST" class="input-group pull-right" ng-submit="changeInviteEmail()">
+					<input class="form-control" ng-init="Email =  result.Invite.NotificationEmail"  ng-model="Email">
+					<span class="input-group-btn">
+						<button class="btn btn-primary" type="submit">Update</button>
+					</span>
+				</form>
+				<div class="clearfix"></div>
+			</div>
+			<div class="list-group-item disabled"></div>
+			<form method="POST" class="list-group-item" ng-submit="sendInvite()">
+				<button type="submit" href class="btn btn-primary">
+					<span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send Invite</span>
+					<span ng-show="result.Invite.Sent==1"><span class="fa fa-send"></span> Resend Invite</span>
+				</button>
+			</form>
+			<div class="list-group-item">
+				<code class="pull-right" ng-if="result.Invite.CreateTime!=0">
+				{{ result.Invite.CreateTime*1000 | date:'medium' }}
+				</code>
+				<strong>Create Time:</strong>
+			</div>
+			<div class="list-group-item">
+				<code class="pull-right" ng-if="result.Invite.SendTime!=0">
+				{{ result.Invite.SendTime*1000 | date:'medium' }}
+				</code>
+				<strong>Send Time:</strong>
+			</div>
+			<div class="list-group-item">
+				<strong>Comment:</strong>
+				<br>
+				<pre ng-show="{{ result.Invite.Comment!='' }}">{{ result.Invite.Comment }}</pre>
+			</div>
+			<div class="list-group-item disabled"></div>
+			<form method="POST" class="list-group-item" ng-submit="deleteUserWL()">
+				<input type="hidden" ng-init="accountID=result.Invite.ID" ng-model="accountID">
+				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
+					<span class="fa fa-trash-o"></span> Delete from Waiting List
+				</button>
+			</form>                    
+		</div>
+	</div>
+
+	<div ng-if="result.User" class="col right">
 		<div class="list-group">
 			<div class="list-group-item list-group-item-info">
 				<strong>Active Users</strong>
@@ -12,10 +68,6 @@
 				<code class="pull-right">{{ result.User.ID }}</code>
 				<input type="hidden" ng-init="accountID=result.User.ID">
 				<strong>UserID:</strong>
-			</div>
-			<div class="list-group-item">
-				<code class="pull-right">{{ result.User.Name }}</code>
-				<strong>Username:</strong>
 			</div>
 			<div class="list-group-item" ng-show="{{ user.Scope=='admin' }}">
 				<code class="pull-right">{{ result.User.NotificationEmail }}</code>
@@ -131,64 +183,6 @@
 					<span class="fa fa-trash-o"></span> Delete from Active Users
 				</button>
 			</form>
-		</div>
-	</div>
-
-
-	<div ng-if="result.Invite" class="col">
-		<div class="list-group">
-			<div class="list-group-item list-group-item-warning">
-				<strong>Waiting List</strong>
-			</div>                   
-			<div class="list-group-item">
-				<code class="pull-right">{{ result.Invite.ID }}</code>
-				<strong>UserID:</strong>
-			</div>
-			<div class="list-group-item">
-				<code class="pull-right">{{ result.Invite.Name }}</code>
-				<strong>Username:</strong>
-			</div>
-			<div class="list-group-item form-inline">
-				<strong>Notification Email:</strong>
-				<form method="POST" class="input-group pull-right" ng-submit="changeInviteEmail()">
-					<input class="form-control" ng-init="Email =  result.Invite.NotificationEmail"  ng-model="Email">
-					<span class="input-group-btn">
-						<button class="btn btn-primary" type="submit">Update</button>
-					</span>
-				</form>
-				<div class="clearfix"></div>
-			</div>
-			<div class="list-group-item disabled"></div>
-			<form method="POST" class="list-group-item" ng-submit="sendInvite()">
-				<button type="submit" href class="btn btn-primary">
-					<span ng-show="result.Invite.Sent==0"><span class="fa fa-send"></span> Send Invite</span>
-					<span ng-show="result.Invite.Sent==1"><span class="fa fa-send"></span> Resend Invite</span>
-				</button>
-			</form>
-			<div class="list-group-item">
-				<code class="pull-right" ng-if="result.Invite.CreateTime!=0">
-				{{ result.Invite.CreateTime*1000 | date:'medium' }}
-				</code>
-				<strong>Create Time:</strong>
-			</div>
-			<div class="list-group-item">
-				<code class="pull-right" ng-if="result.Invite.SendTime!=0">
-				{{ result.Invite.SendTime*1000 | date:'medium' }}
-				</code>
-				<strong>Send Time:</strong>
-			</div>
-			<div class="list-group-item">
-				<strong>Comment:</strong>
-				<br>
-				<pre ng-show="{{ result.Invite.Comment!='' }}">{{ result.Invite.Comment }}</pre>
-			</div>
-			<div class="list-group-item disabled"></div>
-			<form method="POST" class="list-group-item" ng-submit="deleteUserWL()">
-				<input type="hidden" ng-init="accountID=result.Invite.ID" ng-model="accountID">
-				<button type="submit" class="btn btn-danger" ng-confirm-click="ARE YOU SURE? THIS CANT BE UNDONE.">
-					<span class="fa fa-trash-o"></span> Delete from Waiting List
-				</button>
-			</form>                    
 		</div>
 	</div>
 
